@@ -119,11 +119,11 @@ public class QueryUserTokenExpiredCommandTest {
 
         // We should retrieve the mocked objects
         // [{creation_date=1970-01-01 01:00:00.0, uid=uid, token=token}]
-        assertEquals(0L, ((Timestamp) ret.getFirst().get(DatabaseSchema.CREATION_DATE_COLUMN)).getTime());
-        assertEquals(ret.getFirst().get(DatabaseSchema.UID_COLUMN), "uid");
-        assertEquals(ret.getFirst().get(DatabaseSchema.TOKEN_COLUMN), "token");
-        assertEquals(ret.getFirst().get(DatabaseSchema.ADDITIONAL_INFO), "additionalInfo");
-        assertEquals(ret.getFirst().size(), 4);
+        assertEquals(0L, ((Timestamp) ret.get(0).get(DatabaseSchema.CREATION_DATE_COLUMN)).getTime());
+        assertEquals(ret.get(0).get(DatabaseSchema.UID_COLUMN), "uid");
+        assertEquals(ret.get(0).get(DatabaseSchema.TOKEN_COLUMN), "token");
+        assertEquals(ret.get(0).get(DatabaseSchema.ADDITIONAL_INFO), "additionalInfo");
+        assertEquals(ret.get(0).size(), 4);
     }
 
 }
